Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-54934

TextEdit cursor doesn't always adapt to text format

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.7.1
    • 5.6.1
    • None
    • 769002ffe4a93995447a71393371579b1df41e12

      import QtQuick 2.6
      import QtQuick.Window 2.0
      
      Window {
          visible: true
          width: 200
          height: 200
      
          Shortcut {
              sequence: "Ctrl+Q"
              onActivated: Qt.quit()
          }
      
          TextEdit {
              text: "<span style=\"font-size:20pt;\">Blah</span><br>blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah"
              textFormat: TextEdit.RichText
              cursorDelegate: Rectangle { color: "red"; width: 2 }
          }
      }
      

        1. text-cursor.gif
          59 kB
          Mitch Curtis
        For Gerrit Dashboard: QTBUG-54934
        # Subject Branch Project Status CR V

            mitch_curtis Mitch Curtis
            mitch_curtis Mitch Curtis
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes